--- a/assets/css/tophat.css
+++ b/assets/css/tophat.css
@@ -3,14 +3,14 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 25%;
+    width: 100%;
     text-align: center;
     margin: 0 0;
-    min-height: 200px;
+    max-height: 500px;
     align-items: center;
 height: calc(100vh - 50px);
 }
 body {
-background-color: FF8C00;
-color: grey;
+background-color: #4169e1;
+color: black;
 }
